# PJATK_ASI

./: .gitignore  Dockerfile  FraudDetectionPOC.ipynb  Jenkinsfile  README.md  README_kedro.md  app.py  best_pipeline.pkl  docker.key  docker.pub  install_conda_packages.ps1  install_packages_poetry.ps1  kedro setup.md  pyproject.toml  requirements.txt  score_data.csv  stats.json
conf/base/: catalog.yml  parameters_data_science.yml  parameters_init_run.yml  parameters_scoring.yml
data/05_model_input/: hyperparameters.json
data/06_models/model.pickle/2024-06-15T13.38.56.557Z/: model.pickle
data/06_models/std_scaler.pickle/2024-06-15T13.38.56.557Z/: std_scaler.pickle
data/08_reporting/metrics.json/2024-06-15T13.38.56.557Z/: metrics.json
data/08_reporting/selected_hyperparamters.json/2024-06-15T13.38.56.557Z/: selected_hyperparamters.json
notebooks/: FraudDetectionPOC.ipynb  kaggle.json
src/: data_load.py  data_preperation.py  feature_engineering.py  train_model.py
src/pjatk_asi/: __init__.py  __main__.py  fraud_db.db  pipeline_registry.py
src/pjatk_asi/pipelines/data_processing/: nodes_data_preparation.py  nodes_feature_engineering.py  nodes_load_data.py  pipeline.py
src/pjatk_asi/pipelines/data_science/: nodes.py  nodes_caret.py  nodes_data_preparation.py  nodes_model.py  pipeline.py
src/pjatk_asi/pipelines/init_run/: __init__.py  nodes.py  pipeline.py
src/pjatk_asi/pipelines/reporting/: nodes.py  pipeline.py
src/pjatk_asi/pipelines/scoring/: nodes.py  pipeline.py
src/pjatk_asi/web_app/: 2024-06-27T14-04-45_hyperparameters.json  RUN_APP.md  csv_col_eraser.py  db_wrapper.py  make_score_data.py  model.pickle  new_model_app.py  score_data.csv  web_app.py
src/tests/pipelines/init_run/: test_pipeline.py
src2/: data_load.py  data_preperation.py  main.py  train_evaluation.py
