[tool.poetry]
name = "asi-fraud-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
kaggle = "^1.6.8"
opendatasets = "^0.1.22"
seaborn = "^0.13.2"
geopandas = "^0.14.3"
contextily = "^1.6.0"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
